--- a/.github/workflows/sam-pipeline.yml
+++ b/.github/workflows/sam-pipeline.yml
@@ -15,7 +15,7 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-1
       # sam build 
-      - run: sam build --use-container
+      - run: sam build --use-container --beta-features
 
 # Run Unit tests- Specify unit tests here 
 
