--- a/template.yaml
+++ b/template.yaml
@@ -96,21 +96,6 @@ Resources:
                   - sqs:ChangeMessageVisibility
                 Resource: !GetAtt MessageQueue.Arn
 
-  HelloWorldFunction:
-    Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
-    Properties:
-      CodeUri: hello_world/
-      Handler: app.lambda_handler
-      Runtime: python3.8
-      Architectures:
-        - x86_64
-      Events:
-        HelloWorld:
-          Type: Api # More info about API Event Source: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#api
-          Properties:
-            Path: /hello
-            Method: get
-
   HelloWorldTSFunction:
     Type: AWS::Serverless::Function # More info about Function Resource: https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlessfunction
     Properties:
@@ -118,6 +103,7 @@ Resources:
       Handler: app.lambdaHandler
       Runtime: nodejs16.x
       Role: !GetAtt LambdaExecutionRole.Arn
+      MemorySize: 512
       Architectures:
         - x86_64
       Events:
