--- a/hello_world_js/tsconfig.json
+++ b/hello_world_js/tsconfig.json
@@ -3,12 +3,13 @@
     "target": "es2020",
     "strict": true,
     "preserveConstEnums": true,
-    "noEmit": true,
     "sourceMap": false,
-    "module":"es2015",
+    "module":"commonjs",
     "moduleResolution":"node",
     "esModuleInterop": true,
     "skipLibCheck": true,
+    "rootDir": "./",
+    "outDir": ".build",
     "forceConsistentCasingInFileNames": true,
   },
   "exclude": ["node_modules", "**/*.test.ts"]
